versions/1.20.4/translated/uk_ua/players/finding-mods.md
---
title: Пошук надійних модів
description: Інструкція із пошуку модів Fabric за допомогою надійних джерел.
authors:
  - IMB11

search: false
---

# Пошук надійних модів

По-перше, довіра суб’єктивна, і ви завжди повинні керуватися власним судженням, завантажуючи моди. Однак є деякі речі, які ви можете зробити, щоб допомогти вам знайти надійні моди.

## 1. Використовуйте джерело, яке заслуговує довіри

Більшість авторів публікують свої моди на [Modrinth](https://modrinth.com/mods?g=categories:%27fabric%27) та [CurseForge](https://www.curseforge.com/minecraft/search?class=mc-mods&gameVersionTypeId=4).

Ці веб-сайти перевіряють, чи моди є такими, якими вони є, і що вони не містять шкідливого коду. Ви також можете повідомити про шкідливі моди на цих веб-сайтах, і вони відносно швидко вживуть заходів.

## 2. Перевірте в інших!

Якщо ви завантажуєте мод з джерела, яке, як відомо, не заслуговує довіри, вам слід перевірити в інших, чи завантажували вони модифікацію раніше з того місця, звідки ви завантажуєте, і чи виникали у них проблеми з цим.

Якщо ви сумніваєтесь, ви завжди можете запитати в [Діскорд сервері Fabric](https://discord.gg/v6v4pMv) в каналі `#player-support`.

## 3. Уникайте поширених сайтів з вірусами!

:::info
Подібні сайти можуть бути не очевидними для всіх. Якщо ви не впевнені, ви можете запитити думки інших або покладатися лише на перевірені джерела, такі як Modrinth та Curseforge.
:::

Існує багато веб-сайтів, які стверджують, що мають моди для Minecraft, але насправді це лише сайти з вірусами. Вам слід оминати подібні сайти.

Ви можете використовувати антивіруси або вебсайти, такі як [Windows Defender](https://www.microsoft.com/en-us/windows/comprehensive-security) або [VirusTotal](https://www.virustotal.com/) щоб перевіряти завантажені моди. Але не покладайтеся повністю на них, тому що вони не завжди коректні.

Знову ж таки, якщо ви сумніваєтеся, ви можете запитати в [Діскорд сервері Fabric](https://discord.gg/v6v4pMv) в каналі `#player-support`.
